# LisbonTPMS-tool

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
LisbonTPMStool/: FE_functions.py  Surfaces.py  TPMS.py  Utilities.py  __init__.py  im_seg_functions.py  mesh_functions.py
tools/: gen_matrix.py  gen_requirements.py  gen_requirements_basic.py  select_requirements.py  set_python_floor.py  verify_dependencies.py
