[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LisbonTPMStool"
version = "1.1.0"
description = "A TPMS generator with segmentation tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jorge E. Santos", email = "jorge.e.santos@tecnico.ulisboa.pt" }
]
license = { text = "MIT" }
keywords = ["TPMS", "materials", "geometry", "segmentation", "meshes", "finite element"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

dependencies = [
    # Core dependencies (common across all versions)
    "numpy>=2.1,<3.0",
    "numpy-stl>=3.2,<4.0",
    "scipy>=1.15,<2.0",
    "porespy>=2.4,<3.0",
    "scikit-image>=0.24,<0.25; python_version < '3.13'",
    "pyvista>=0.40,<0.44.2",
    "vtk>=9.3.0,<9.4",
    "pypardiso>=0.4,<0.5",
    "ipython>=8.0"
]

[project.optional-dependencies]
meshing = ["trimesh", "meshio"]

[project.urls]
Homepage = "https://github.com/JorgeESantos/LisbonTPMS-tool"
#Issues = "https://github.com/JorgeESantos/LisbonTPMS-tool/issues"

[tool.setuptools]
packages = ["LisbonTPMStool"]